fix: reduced button gaps in longer devices

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ header {
 
 .theme-logic {
   display: flex;
-  width: 7rem;
+  width: 8rem;
   justify-content: space-between;
   align-items: center;
 }
@@ -51,20 +51,20 @@ header {
   color: #ffe701;
   font-weight: 800;
   font-size: small;
-  width: 48px;
+  width: 54px;
 }
 
 .nums span:nth-child(2) {
-  margin-left: 8px;
+  margin-left: 7px;
 }
 
 .nums span:nth-child(3) {
-  margin-left: 8px;
+  margin-left: 7px;
 }
 
 .slider {
   display: flex;
-  width: 42px;
+  width: 54px;
   justify-content: space-between;
   height: 16px;
   border-radius: 16px;
@@ -105,8 +105,6 @@ header {
 
 .operators {
   background-color: rgb(91, 23, 100);
-  height: 55px;
-  width: initial;
   border-radius: 5px;
   display: flex;
   align-items: center;
@@ -120,8 +118,6 @@ header {
 
 .main-btns {
   background-color: rgb(91, 23, 100);
-  height: 60px;
-  width: initial;
   border-radius: 5px;
   display: flex;
   align-items: center;
@@ -158,6 +154,24 @@ header {
   .display-output,
   .calc-btns-wrapper {
     width: 80vw;
+    gap: 10px;
+  }
+  .operators {
+    font-size: 28px;
+  }
+}
+
+@media screen and (min-height: 650px) {
+  body {
+    height: 85vh;
+  }
+  .container {
+    height: 70vh;
+    gap: 5px;
+  }
+
+  .calc-btns-wrapper {
+    height: 40vh;
   }
 }
 
